--- a/index.css
+++ b/index.css
@@ -29,7 +29,67 @@ h1 {
   top: 500px;
 }
 
-chris{
+span.chris {
   display: block;
+  font-size: 0.75em;
+  color: #999;
+}
+span.favorite {
+  display: none;
 }
 
+ul#flicks {
+  list-style: none;
+  margin: 1rem;
+  padding: 0;
+  border: 1px solid #eee;
+}
+
+.flick {
+  padding: 0.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.flick:nth-of-type(odd) {
+  background-color: #f6f6f6;
+}
+
+.flick.fav {
+  background-color: #ffff66;
+}
+
+
+.actions {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.actions button {
+  border: 0;
+  padding: 0.75rem 0.8rem;
+  transition: background-color .25s ease-out, transform .1s ease-out;
+  cursor: pointer;
+}
+.actions button:hover {
+  transform: scale(1.1);
+}
+
+button.remove {
+  background-color: #cc3344;
+  color: white;
+}
+button.remove:hover {
+  background-color: #ee3344;
+}
+
+button.fav {
+  background-color: #ffbb22;
+  color: black;
+}
+button.fav:hover {
+  background-color: #ffdd33;
+  color: black;
+}
